@@ -8,6 +8,7 @@ New features:
 ...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)
 
 Bug fixes:
+........S. [ZBX-6353] improved history cache performance when it's flooded with data from less than 1000 items (wiper)
 ..F.I..... [ZBX-8851] added "-1" and "0" as allowed values for "max_execution_time" and "max_input_time" PHP configuration settings (Krists)
 A.F....... [ZBX-8720] fixed resolving of macros in graph names when graph name contains strings similar to macros (Krists)
 .......PS. [ZBX-6163] added session restoring to MySQL connections in case of losing connection to the database (Juris)
@@ -38,6 +39,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese and Greek translations; thank
 ...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)
 
 Bug fixes:
+........S. [ZBX-6353] improved history cache performance when it's flooded with data from less than 1000 items (wiper)
 .......PS. [ZBX-8916] fixed "lastlogsize" not being updated in the configuration cache when values are received from the agent (asaveljevs, Sasha)
 ..F....... [ZBX-8877] fixed filters not hiding/showing for IE11 (Krists)
 ...G...PS. [ZBX-8794] fixed parsing of runtime control options and related error messages (igors)
@@ -483,6 +485,7 @@ Changes for 2.2.8rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-6353] improved history cache performance when it's flooded with data from less than 1000 items (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.7
